--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+####Task1.java####
+
+
 package mapreduce.demo.task1;
 
 import org.apache.hadoop.fs.Path; 
@@ -40,7 +43,11 @@ public class Task1 {
 		job.waitForCompletion(true);
 	}
 }
-//Mapper class
+
+
+####Task1Mapper.java####
+
+
 package mapreduce.demo.task1;
 
 import java.io.IOException;
@@ -61,7 +68,11 @@ public class Task1Mapper extends Mapper<LongWritable, Text, Text, IntWritable> {
 		}
 	}
 }
-//Reducer class
+
+
+####Task1Reducer.java####
+
+
 package mapreduce.demo.task1;
 
 import java.io.IOException;
@@ -74,15 +85,15 @@ public class Task1Reducer extends Reducer<Text, IntWritable, Text, IntWritable>
 {	
 	public void reduce(Text key, Iterable<IntWritable> values,Context context) throws IOException, InterruptedException
 	{
-		int sum = 0;
+		int Val = 0;
 		
 	    	
-		for (IntWritable value : values) {
+		for (IntWritable v : values) {
             
-			sum = sum + value.get() ;
+			Val = Val + v.get() ;
 		}
 		
 
-		context.write(key, new IntWritable(sum));
+		context.write(key, new IntWritable(Val));
 	}
 }
